--- a/CapaEntidad/CapaEntidad.csproj
+++ b/CapaEntidad/CapaEntidad.csproj
@@ -42,8 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cargo.cs" />
+    <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PuestoDeTrabajo.cs" />
+    <Compile Include="Talla.cs" />
     <Compile Include="Unidad.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
