--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -43,6 +43,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CD_Cargo.cs" />
+    <Compile Include="CD_DetalleDotacion.cs" />
+    <Compile Include="CD_Dotacion.cs" />
+    <Compile Include="CD_ListaDotacion.cs" />
     <Compile Include="CD_Producto.cs" />
     <Compile Include="CD_PuestoDeTrabajo.cs" />
     <Compile Include="CD_Talla.cs" />
