--- a/CapaEntidad/CapaEntidad.csproj
+++ b/CapaEntidad/CapaEntidad.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Cargo.cs" />
     <Compile Include="DetalleDotacion.cs" />
     <Compile Include="Dotacion.cs" />
+    <Compile Include="Inventario.cs" />
     <Compile Include="ListaDotacion.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
