--- a/CapaNegocio/CapaNegocio.csproj
+++ b/CapaNegocio/CapaNegocio.csproj
@@ -45,6 +45,7 @@
     <Compile Include="CN_Cargo.cs" />
     <Compile Include="CN_DetalleDotacion.cs" />
     <Compile Include="CN_Dotacion.cs" />
+    <Compile Include="CN_Inventario.cs" />
     <Compile Include="CN_ListaDotacion.cs" />
     <Compile Include="CN_Producto.cs" />
     <Compile Include="CN_PuestoDeTrabajo.cs" />
